# sciona

./: .env  .gitignore  AGENTS.md  ARCH.md  ARCHITECTURE_AGENT_TEMPLATE.md  BENCHMARK.md  BUSINESS_PLAN_TOOLING_GAPS.md  CROSS_FAMILY.md  Dockerfile.visualizer  E2E_TEST_PLAN.md  EXAMPLE.md  EXPAND_CATALOG.md  FAMILY_COVERAGE.md  FUTURE_CATALOG.md  GENERALIZE.md  HYPERPARAMS.md  INSERT_SKELETON.md  INSTALL.md  LIB_DEFICIT.md  LLAMAS.md  PHYSICS_INGESTION.md  PLAN-catalog-enrichment.md  PLAN-lightweight-prompts.md  PLAN-three-fixes.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_DONE.md  ROLES.md  SHARED_CONTEXT.md  SINGLE_MODE.md  SQL_MANIFEST.md  TOOLS.md  TOOLS_PLAN.md  UNCERTAINTY.md  UX.md  VARIANT.md  VISUALIZE.md  ageom_runtime_signal_event_rate.py  benchmark.sh  (+12 more)
.sciona_generated_adapters/: .sciona_capnostream_h10_accel_h10_ecg_h10_hr_h10_ibi_runner.yml  .sciona_h10_ecg_runner.yml
ageom/: atoms_repo_verifier.py  benchmark_validation.py  catalog_validation.py  cli.py  config.py  flow_benchmark.py  graph_store.py  llm_router.py  orchestrator.py  prompt_benchmark.py  protocols.py  receipt.py  release_validation.py  result_to_cdg.py  runtime_signal_event_rate.py  shared_context.py  signal_event_rate_registry.py  sources.py  telemetry.py  telemetry_store.py  types.py  upsert_cdg.py  visualizer_api.py
benchmarks/: benchmark.sh  e2e_benchmark.sh  e2e_benchmark_all.sh
docker/: .env.example  README.md  compose.yml  create-networks.sh
docs/: AGEO_AGENTS.md  BASELINE_ANALYSIS_PLAN.md  BASELINE_SKELETON_AUDIT.md  EXAMPLE.md  EXPANSION_REFINEMENT_RESUME.md  INGEST_ARCHITECTURE.md  INGEST_IDEAS.md  INGEST_TOOLING_CONTRACT.md  INSTALL.md  LLAMAS.md  MAP_COMBINATOR_PLAN.md  NUMPY.md  PLAN_COMMON_PATTERNS.md  PLAN_HIGH_LEVEL_API.md  PLAN_TEMPLATE_RETRIEVAL.md  PLAN_VALIDATION_V2.md  QUICKSTART.md  REFINE_INGEST_1.md  REFINE_INGEST_10.md  REFINE_INGEST_11.md  REFINE_INGEST_12.md  REFINE_INGEST_13.md  REFINE_INGEST_14.md  REFINE_INGEST_15.md  REFINE_INGEST_16.md  REFINE_INGEST_17.md  REFINE_INGEST_2.md  REFINE_INGEST_3.md  REFINE_INGEST_4.md  REFINE_INGEST_5.md  REFINE_INGEST_6.md  REFINE_INGEST_7.md  REFINE_INGEST_8.md  REFINE_INGEST_9.md  REFINE_INGEST_STATUS.md  REFINE_INGEST_TRACKS.md  ROLES.md  SCIPY.md  SKEL_PHASE_1.md  SKEL_PHASE_2.md  (+13 more)
e2e_goals/: ecg_heart_rate.yml  ecg_heart_rate_eval.json  fft_spectral.yml  lcs_strings.yml  shortest_path.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
llms/: install_defaults.sh  run_defaults.sh  test_all.py
migrations/: 003_phase_c_verification.sql  004_phase_d_ecosystem.sql
plans/: phase1-assembler.md  phase2-repair-agent.md  phase3-extractor.md
prompts/: expand-ingest.md
sciona/: __init__.py  api_models.py  asset_atom_registry.py  asset_migration.py  atom_identity.py  atoms_repo_verifier.py  benchmark_validation.py  catalog_validation.py  cdg_projection.py  cli.py  config.py  e2e_benchmark_summary.py  flow_benchmark.py  graph_store.py  heuristic_metadata.py  heuristic_registries.py  heuristic_registry_assets.py  heuristics.py  json_utils.py  julia_runtime.py  license_policy.py  llm_router.py  mcmc_registry.py  orchestrator.py  prompt_benchmark.py  protocols.py  provider_expansion_declarations.py  receipt.py  release_validation.py  result_to_cdg.py  runtime_mcmc.py  runtime_paths.py  runtime_sequential_filter.py  sdk.py  sequential_filter_registry.py  shared_context.py  signal_event_rate_registry.py  sources.py  telemetry.py  types.py  (+4 more)
scripts/: LLAMA.md  __init__.py  backfill_audit_evidence.py  backfill_audit_rollups.py  backfill_contribution_events_git.py  backfill_dejargonized_descriptions.py  backfill_io_specs.py  backfill_parameters.py  backfill_references.py  backfill_references_registry.py  backfill_technical_descriptions.py  backfill_uncertainty.py  backfill_utils.py  backfill_verification_matches.py  check_expansion_manifest_closure.py  consistency_check_content_checksums.py  consistency_check_counts.py  consistency_check_pk_checksums.py  diagnose_publication_completeness.py  ensure_juliacall_runtime.py  example.sh  export_manifest.py  generate_embeddings.py  generate_provider_benchmark_results.py  migrate_phase1_organizations.py  (+24 more)
(+1305 files in other folders)
