[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciona"
version = "0.1.1"
description = "Functional Matching Agent for grounding predicates into verified library functions in Lean 4/Mathlib and Coq/Rocq"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
indexer = [
    "faiss-cpu>=1.7.4",
    "fastembed>=0.3.6",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
lean = [
    "lean-explore[local]>=0.4.0",
    "lean-interact>=0.9.0",
]
coq = [
    "coqpyt>=0.1.0",
]
hunter = [
    "pydantic-graph>=0.1.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
architect = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg_pool>=3.1.0",
    "pyyaml>=6.0",
]
python-target = [
    "mypy>=1.0",
    "icontract>=2.6",
    "docstring-parser>=0.15",
]
ghost = [
    "ageoa>=0.1.0",
]
graph = [
    "neo4j>=5.0",
]
visualizer = [
    "sciona[graph]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
synthesizer = [
    "sciona[hunter]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "asyncpg>=0.29",
    "mypy>=1.0",
    "temporalio>=1.5",
]
all = [
    "sciona[indexer,lean,coq,hunter,architect,synthesizer,python-target,ghost,graph,dev]",
]

[project.scripts]
sciona = "sciona.cli:main"

[tool.hatch.build.targets.sdist]
include = ["sciona/", "pyproject.toml", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["sciona"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore:torch was imported before juliacall.*:UserWarning",
]
markers = [
    "slow: marks tests as slow (require model downloads)",
    "supabase_local: exercises migrations against a local Supabase stack",
    "match_regression_deterministic: deterministic Hunter regression suite using fixture-backed cases",
    "match_regression_live: live Hunter regression suite using a local llama server",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
